--- a/package.json
+++ b/package.json
@@ -58,5 +58,9 @@
     "typescript": "^4.8.4",
     "verdaccio": "^5.0.4",
     "yaml": "^2.1.3"
-  }
+  },
+  "workspaces": [
+    "packages/token",
+    "packages/utils"
+  ]
 }
