--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -6,7 +6,11 @@
     "resolveJsonModule": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
-    "baseUrl": "."
+    "baseUrl": ".",
+    "paths": {
+      "@volano/token": ["packages/token/assembly/index.ts"],
+      "@volano/utils": ["packages/utils/assembly/index.ts"]
+    }
   },
   "exclude": ["node_modules", "tmp"]
 }
