--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
   "name": "@nx/local-koinos",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "test": "koinos-sdk-as-cli run-tests"
+  },
   "private": true,
+  "type": "module",
   "dependencies": {
     "@koinosbox/contracts": "^1.2.2",
     "axios": "^1.0.0",
@@ -17,12 +20,11 @@
   "devDependencies": {
     "@as-covers/core": "^0.4.2",
     "@as-pect/cli": "^8.1.0",
-    "@koinos/abi-proto-gen": "^1.0.0",
+    "@koinos/abi-proto-gen": "github:koinos/koinos-abi-proto-gen",
     "@koinos/as-gen": "^1.0.0",
     "@koinos/as-proto-gen": "^1.0.3",
     "@koinos/mock-vm": "^1.0.0",
     "@koinos/sdk-as": "^1.1.0",
-    "@koinos/sdk-as-cli": "^1.0.0",
     "@nx/esbuild": "17.2.5",
     "@nx/eslint-plugin": "16.8.1",
     "@nx/jest": "17.2.5",
@@ -32,15 +34,15 @@
     "@nx/plugin": "^17.2.5",
     "@nx/workspace": "17.2.5",
     "@roamin/local-koinos": "^0.4.15",
-    "@roaminroe/protoc": "^2.4.0",
+    "@roamin/protoc": "^2.4.0",
     "@swc-node/register": "~1.6.7",
     "@swc/core": "~1.3.85",
     "@types/jest": "^29.4.0",
     "@types/node": "18.16.9",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
     "@typescript-eslint/parser": "^5.60.1",
-    "as-proto": "npm:@koinos/as-proto@1.0.1",
-    "assemblyscript": "^0.27.0",
+    "as-proto": "^1.3.0",
+    "assemblyscript": "^0.27.1",
     "copyfiles": "^2.4.1",
     "dotenv": "^16.0.3",
     "esbuild": "^0.19.9",
