Remove type from package.json to remove .cjs fix for koinos.config

--- a/packages/token/project.json
+++ b/packages/token/project.json
@@ -7,7 +7,7 @@
     "build": {
       "executor": "nx:run-commands",
       "options": {
-        "command": "koinos-precompiler-as packages/token/koinos.config.cjs"
+        "command": "koinos-precompiler-as packages/token/koinos.config.js"
       }
     },
     "build:test": {
